--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Favorite Things</title>
 </head>
   <body>
-    <div class="jumbotron">Tell us some of your favorite things!</div>
+    <div class="jumbotron"><h1>Tell us some of your favorite things!</h1></div>
 
     <div class="container">
       <div class="form-group">
@@ -19,6 +19,8 @@
           <input id="favorite2" class="form-control" type="text">
           <label for="favorite3">What is your third favorite thing?</label>
           <input id="favorite3" class="form-control" type="text">
+
+          <button type="submit" class="btn btn-dark btn-block">Submit</button>
         </form>
       </div>
     </div>
