--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <button type="submit" class="btn btn-dark btn-block">Submit</button>
         </form>
       </div>
+      <label id="result">
+        <p></p>
+        </label>
     </div>
   </body>
 </html>
